--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
 <body>
     <h1 class="centered-title">Printalyst<img src="assets/flower-icon.svg"></h1>
 
-    <div class="section" style="background-color: #ddd4d4;">
-        <p>Printalyst is aims to make 3D printing accessible for underprivileged or remote people. <img src="assets/printing.png" class="inline-image"></p>
-    </div>
+    <table class="section" style="background-color: aquamarine;">
+        <tr>
+            <td>
+                <p>Printalyst is aims to make 3D printing accessible for underprivileged or remote people.</p>
+            </td>
+            <td>
+                <img src="assets/printing.png" alt="3D Printer icon">
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
