Add Elligibility requirements

--- a/index.html
+++ b/index.html
@@ -11,15 +11,29 @@
 <body>
     <h1 class="centered-title">Printalyst<img src="assets/flower-icon.svg"></h1>
 
-    <table class="section" style="background-color: aquamarine;">
+    <table class="section" style="background-color: #ddd4d4;">
         <tr>
             <td>
                 <p>Printalyst is aims to make 3D printing accessible for underprivileged or remote people.</p>
             </td>
             <td>
-                <img src="assets/printing.png" alt="3D Printer icon">
+                <img src="assets/printing.png">
             </td>
         </tr>
     </table>
+
+    <br>
+
+    <table class="section" style="background-color: #ffc7c7;">
+        <tr>
+            <td>
+                <img src="assets/Buildings.svg">
+            </td>
+            <td>
+                <p>To be eligible, you have to explain efforts you took to find public access printers such as looking for local libraries, makerspaces, and fab labs.</p>
+            </td>
+        </tr>
+    </table>
+
 </body>
 </html>
