Add explanation section

--- a/index.html
+++ b/index.html
@@ -35,5 +35,21 @@
         </tr>
     </table>
 
+    <br>
+
+    <table class="section" style="color: white;">
+        <tr>
+            <td>
+                <ul>
+                    <li>We directly provide free 3D printing for underprivileged youth.</li>
+                    <li>We also provide 3D printers to public access spaces to help manage costs, especially internationally.</li>
+                </ul>
+            </td>
+            <td>
+                <img src="assets/package.svg" style="color: white;">
+            </td>
+        </tr>
+    </table>
+
 </body>
 </html>
