Add submission section and move elligibility

--- a/index.html
+++ b/index.html
@@ -24,32 +24,38 @@
 
     <br>
 
-    <table class="section" style="background-color: #ffc7c7;">
+    <table class="section" style="color: white;">
         <tr>
             <td>
-                <img src="assets/Buildings.svg">
+                <ul>
+                    <img src="assets/package.svg" style="color: white;">
+                </ul>
             </td>
             <td>
-                <p>To be eligible, you have to explain efforts you took to find public access printers such as looking for local libraries, makerspaces, and fab labs.</p>
+                <li>We directly provide free 3D printing for underprivileged youth.</li>
+                    <li>We also provide 3D printers to public access spaces to help manage costs, especially internationally.</li>
             </td>
         </tr>
     </table>
 
     <br>
 
-    <table class="section" style="color: white;">
+    <table class="section" style="background-color: #ffc7c7;">
         <tr>
             <td>
-                <ul>
-                    <li>We directly provide free 3D printing for underprivileged youth.</li>
-                    <li>We also provide 3D printers to public access spaces to help manage costs, especially internationally.</li>
-                </ul>
+                <p>To be eligible, you have to explain efforts you took to find public access printers such as looking for local libraries, makerspaces, and fab labs.</p>
             </td>
             <td>
-                <img src="assets/package.svg" style="color: white;">
+                <img src="assets/Buildings.svg">
             </td>
         </tr>
     </table>
+
+    <br>
+
+    <div style="width:100%;height:50em;" data-fillout-id="2uk87jBRBZus" data-fillout-embed-type="standard" data-fillout-inherit-parameters></div><script src="https://server.fillout.com/embed/v1/"></script>
+
+    <br>
 
 </body>
 </html>
