--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
+    <ul class="nav">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="get-involved.html">Get Involved</a></li>
+    </ul>
+
     <h1 class="centered-title">Printalyst<img src="assets/flower-icon.svg"></h1>
 
     <table class="section" style="background-color: #ddd4d4;">
