--- a/get-involved.html
+++ b/get-involved.html
@@ -15,5 +15,7 @@
             <li class="active"><a href="get-involved.html">Get Involved</a></li>
         </ul>
     </div>
+
+        <h1 class="centered-title">Get Involved<img src="assets/flower-icon.svg"></h1>
 </body>
 </html>
