Create "Get Involved Page"

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="nav-container">
         <ul class="nav">
             <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="get-involved.html">Get Involved</a></li>
         </ul>
     </div>
 
