--- a/get-involved.html
+++ b/get-involved.html
@@ -15,7 +15,35 @@
             <li class="active"><a href="get-involved.html">Get Involved</a></li>
         </ul>
     </div>
+    
+    <h1 class="centered-title">Printalyst<img src="assets/flower-icon.svg"></h1>
 
-        <h1 class="centered-title">Get Involved<img src="assets/flower-icon.svg"></h1>
+    <h1 style="text-align: center; font-family: Lato; color: #fbdcd9; font-size: 3em; margin-top: -1em; font-weight: 500;">Join our team!</h1>
+    
+    <table style="width: 50%; margin-left: auto; margin-right: auto; border-spacing: 5em;">
+        <tr>
+            <td>
+                <div class="box" style="color: #3d376b;">
+                    <h2>Donate</h2>
+                    <p style="vertical-align: middle;">Donate Link</p>
+                </div>
+
+                <br style="margin-bottom: 12em;">
+
+                <div class="box" style="color: #ff8888;">
+                    <h2 style="margin-bottom: initial;">Outreach</h2>
+                    <p>Help us grow!<br>Join our finance team and find grants/sponsorships!</p>
+                </div>
+
+            </td>
+            <td>
+                <div class="box" style="vertical-align: middle; color: #dfaf36;">
+                    <h2 style="margin-bottom: initial;">Print</h2>
+                    <p>Already have a 3D printer? Print for us and get service hours.</p>
+                </div>
+            </td>
+        </tr>
+    </table>
+
 </body>
 </html>
