Add donate button

--- a/get-involved.html
+++ b/get-involved.html
@@ -24,14 +24,14 @@
         <tr>
             <td>
                 <div class="box" style="color: #3d376b;">
-                    <h2>Donate</h2>
-                    <p style="vertical-align: middle;">Donate Link</p>
+                    <h2 style="margin-bottom: 0.5em;">Donate</h2>
+                    <a href="https://hcb.hackclub.com/donations/start/misfits"><button>Donate Now</button></a>
                 </div>
 
                 <br style="margin-bottom: 9em;">
 
                 <div class="box" style="color: #ff8888;">
-                    <h2 style="margin-bottom: initial;">Outreach</h2>
+                    <h2>Outreach</h2>
                     <p>Help us grow!<br>Join our finance team and find grants/sponsorships!</p>
                 </div>
 
