--- a/index.html
+++ b/index.html
@@ -64,5 +64,11 @@
 
     <br>
 
+    <p style="text-align: center;">
+        <iframe src="https://hcb.hackclub.com/donations/start/printalyst" style="border:none;" name="donateFrame" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="1000px" width="512px" allowfullscreen></iframe>
+    <
+
+    <br>
+
 </body>
 </html>
