--- a/index.html
+++ b/index.html
@@ -60,15 +60,21 @@
 
     <br>
 
-    <div style="width:100%;height:50em;" data-fillout-id="2uk87jBRBZus" data-fillout-embed-type="standard" data-fillout-inherit-parameters></div><script src="https://server.fillout.com/embed/v1/"></script>
+    <div style="text-align: center;">
 
-    <br>
+        <a href="https://hcb.hackclub.com/donations/start/printalyst" class="embedButton"><button>Donate Now</button></a>
 
-    <p style="text-align: center;">
-        <iframe src="https://hcb.hackclub.com/donations/start/printalyst" style="border:none;" name="donateFrame" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="1000px" width="512px" allowfullscreen></iframe>
-    <
+        <br>
 
-    <br>
+        <div style="width:100%;height:80vh;" data-fillout-id="2uk87jBRBZus" data-fillout-embed-type="standard" data-fillout-inherit-parameters></div><script src="https://server.fillout.com/embed/v1/"></script>
+
+        <br>
+
+        <iframe src="https://hcb.hackclub.com/donations/start/printalyst" style="border:none;" class="embed" name="donateFrame" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" width="512px" height="1000px" allowfullscreen></iframe>
+
+        <a 
+
+    </div>
 
 </body>
 </html>
