Fix mobile version of the Get Involved page

--- a/get-involved.html
+++ b/get-involved.html
@@ -19,21 +19,21 @@
     
     <h1 class="centered-title">Printalyst<img src="assets/flower-icon.svg"></h1>
 
-    <h1 style="text-align: center; font-family: Lato; color: #fbdcd9; font-size: 3em; margin-top: -1em; font-weight: 500;">Join our team!</h1>
+    <h1 style="text-align: center; font-family: Lato; color: #fbdcd9; font-size: 4vh; margin-top: -1em; font-weight: 500;">Join our team!</h1>
     
     <table style="width: 50%; margin-left: auto; margin-right: auto; border-spacing: 1.5em;">
         <tr>
             <td>
                 <div class="box" style="color: #3d376b;">
                     <h2 style="margin-bottom: 0.5em;">Donate</h2>
-                    <a href="https://hcb.hackclub.com/donations/start/printalyst"><button>Donate Now</button></a>
+                    <a href="https://hcb.hackclub.com/donations/start/printalyst"><button style="width: 90%;">Donate Now</button></a>
                 </div>
 
                 <br style="margin-bottom: 9em;">
 
                 <div class="box" style="color: #ff8888;">
                     <h2>Outreach</h2>
-                    <p>Help us grow!<br>Join our finance team and find grants/sponsorships!</p>
+                    <p>Help us grow!<br>Join our finance team and find grants or sponsorships!</p>
                 </div>
 
             </td>
